# resources/model_user_attributes.go
@@ -1,20 +1,0 @@
-/*
- * GENERATED. Do not modify. Your changes might be overwritten!
- */
-
-package resources
-
-type UserAttributes struct {
-	Certificate  string `json:"Certificate"`
-	CourseTitle  string `json:"CourseTitle"`
-	DataHash     string `json:"DataHash"`
-	Date         string `json:"Date"`
-	ID           string `json:"ID"`
-	Msg          string `json:"Msg"`
-	Note         string `json:"Note"`
-	Participant  string `json:"Participant"`
-	Points       string `json:"Points"`
-	SerialNumber string `json:"SerialNumber"`
-	Signature    string `json:"Signature"`
-	TxHash       string `json:"TxHash"`
-}
